data/apps/argocd/traefik-middleware/rewrite-response/httproute-updated.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: coder:gateway.networking.k8s.io/HTTPRoute:coder/coder
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.36.0
    helm.sh/chart: coder-2.36.0
  name: coder
  namespace: coder
spec:
  hostnames:
    - coder.xxx.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.containo.us
            kind: Middleware
            name: mask-password
      backendRefs:
        - name: coder
          port: 8080
